# dotfiles

./: .envrc  .git-blame-ignore-revs  .gitignore  .gitmodules  .ignore  NOTES.norg  README.adoc  README.md  TODO.adoc  TODO.md  TODO.norg  automerge.sh  branch-dependencies.txt  branchdiff.sh  branches.txt  deploy.sh  devenv.nix  diff_deployed.sh  flake.nix  format-python-code.sh  install.sh  keyboard-shortcuts.txt  notes.norg  pull.sh  push.sh  requirements.txt  reset.sh  ruff.toml  settings.json  stage.sh  todo.norg  uninstall.sh
.deploy/: .Xdefaults  .bash_aliases  .bash_fzf  .bashrc  .git-prompt.sh  .ignore  .inputrc  .ripgreprc  .xmodmaprc  .xsessionrc  .z.lua  .z.sh
.deploy-debian/: .ripgreprc
.deploy-home-eeepc-nixos/: .bash_nixos
.deploy-home-lenovo-debian/: .Xresources  .git-prompt.sh
.deploy-kodi/: .Xresources  .bash_profile  .ideavimrc  .xmodmaprc  .xsessionrc
.deploy-mazais/: .dircolors  .tmux.conf  .xmodmaprc
.deploy-nixos/: .Xresources  .clang-format  .xprofile  .z.sh
.deploy-tieto2/: .xbindkeysrc
.deploy-tieto2-desktop-debian/: .bash_fzf  .profile  .xsessionrc
.deploy-tieto2-laptop-debian/: .xprofile
attic/: 0001-wip-printing-no-luck-yet.patch  reset-branches.sh
bash/: .bash_aliases  .bash_fzf  .bashrc  .ignore  .profile  bash_aliases  bash_fzf  bashrc  inputrc
clang-format/: .clang-format  URL
configs/: home-desktop-debian  home-desktop-nixos  home-desktop-nixos-qemu  home-htpc-nixos  home-htpc-nixos-qemu  home-htpc-ubuntu  home-taukulis.lv-digitalocean  jupiter  jupiter-devcontainer  jupiter-qemu  jupiter-work  manjaro-qemu  mercury  saturn  saturn-qemu  ubuntu-vm  work-desktop-debian  work-laptop-debian-wsl
dependencies/: install-dependencies.sh  install-i3blocks.sh  install-python-apps.sh  install-rust-tools.sh  install-rust.sh  install-st.sh  rust-tools.txt  upgrade-doom-emacs.sh  upgrade-nix.sh  upgrade-python-apps.sh
devrun/: main.py  pyproject.toml
docs/: saturn-volume-control-plan.md
dunst/: dunstrc
flakes/: flake.nix
git/: config  config-home  config-work  gitignore  gitk  gitk-eeepc  gitk-nixos
hyprland/: hyprland.conf
i3/: README.adoc  commands-htpc.json  commands-kodi.json  commands.json  config  doubleblind.sh  i3ipc-playground.py  notification-test.py  setup-testing-env.sh  workspaces.json  (+6 more)
i3/i3init/: .gitignore  LICENSE.txt  NOTES.norg  README.md  devenv.nix  pyproject.toml  requirements.txt  typings.patch
i3/i3init/src/i3init/: __about__.py  __init__.py  cli.py  entities.py  initworkspace.py
i3/i3init/tests/: __init__.py  test.py
i3/i3init/typings/i3ipc/: __init__.pyi  __version__.pyi  con.pyi  connection.pyi  events.pyi  model.pyi  replies.pyi
i3/i3init/typings/i3ipc/_private/: __init__.pyi  pubsub.pyi  sync.pyi  types.pyi
i3/i3init/typings/i3ipc/aio/: __init__.pyi  connection.pyi
i3/i3init/util/: create-typestub-diff.sh  regenerate-typestubs.sh
i3/i3init/xwinpid/: .gitignore  build.zig  build.zig.zon  devenv.nix  flake.nix
i3/i3init/xwinpid/src/: main.zig
(+665 files in other folders)
