[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i3init"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Reinis Taukulis", email = "reinis.taukulis@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "i3ipc",
]
dynamic = ["version"]

# [project.scripts]
# i3init = "i3init.cli:main_cli"

# [project.urls]
# Documentation = "https://github.com/unknown/i3init#readme"
# Issues = "https://github.com/unknown/i3init/issues"
# Source = "https://github.com/unknown/i3init"

[tool.hatch.version]
path = "src/i3init/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/i3init --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/i3init/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pyright]
include = ["src", "tests"]
stubPath = "typings"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.black]
line-length = 100
